k8s/native-boot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: native-boot
  name: native-boot-service
  labels:
    app: native-boot
spec:
  type: ClusterIP
  ports:
    - port: 8089
      protocol: TCP
      targetPort: 8089
  selector:
    app: native-boot
